==> jnaulet/OpenPicoRTOS/staging/drivers/can/can-sam3x.c <==
#include "can-sam3x.h"
#include "picoRTOS.h"
#include <stdint.h>
#define CAN_MR_DRPT   (1 << 7)
#define CAN_MR_TIMFRZ (1 << 6)
#define CAN_MR_TTM    (1 << 5)
#define CAN_MR_TEOF   (1 << 4)
#define CAN_MR_OVL    (1 << 3)
#define CAN_MR_ABM    (1 << 2)
#define CAN_MR_LPM    (1 << 1)
#define CAN_MR_CANEN  (1 << 0)
#define CAN_BR_SMP       (1 << 24)
#define CAN_BR_BRP_M     0x7fu
#define CAN_BR_BRP(x)    (((x) & CAN_BR_BRP_M) << 16)
#define CAN_BR_SJW_M     0x3u
#define CAN_BR_SJW(x)    (((x) & CAN_BR_SJW_M) << 12)
#define CAN_BR_PROPAG_M  0x7u
#define CAN_BR_PROPAG(x) (((x) & CAN_BR_PROPAG_M) << 8)
#define CAN_BR_PHASE1_M  0x7u
#define CAN_BR_PHASE1(x) (((x) & CAN_BR_PHASE1_M) << 4)
#define CAN_BR_PHASE2_M  0x7u
#define CAN_BR_PHASE2(x) ((x) & CAN_BR_PHASE2_M)
#define CAN_MMRn_MOT_M  0x7u
#define CAN_MMRn_MOT(x) (((x) & CAN_MMRn_MOT_M) << 24)
#define CAN_MMRn_MOT_DISABLED        0
#define CAN_MMRn_MOT_MB_RX           1
#define CAN_MMRn_MOT_MB_RX_OVERWRITE 2
#define CAN_MMRn_MOT_MB_TX           3
#define CAN_MMRn_MOT_MB_CONSUMER     4
#define CAN_MMRn_MOT_MB_PRODUCER     5
#define CAN_MIDn_MIDE     (1 << 29)
#define CAN_MIDn_MIDvA_M  0x7ffu
#define CAN_MIDn_MIDvA(x) (((x) & CAN_MIDn_MIDvA_M) << 18)
#define CAN_MIDn_MIDvB_M  0x3fffu
#define CAN_MIDn_MIDvB(x) ((x) & CAN_MIDn_MIDvB_M)
#define CAN_MSRn_MRDY (1 << 23)
#define CAN_MCRn_MTRC        (1 << 23)
#define CAN_MCRn_MACR        (1 << 22)
#define CAN_MCRn_MRTR        (1 << 20)
#define CAN_MCRn_MDLC_M      0xfu

static int set_bitrate(struct can *ctx, unsigned long bitrate)
{
    if (!picoRTOS_assert(bitrate > 0)) return -EINVAL;

    size_t brp;
    clock_freq_t freq;

    if ((freq = clock_get_freq(ctx->clkid)) < 0)
        return (int)freq;

    if (!picoRTOS_assert(((unsigned long)freq % bitrate) == 0))
        return -EIO;

    /* start iterative detection of params */
    for (brp = (size_t)1; brp <= (size_t)(CAN_BR_BRP_M + 1u); brp++) {
        size_t tq_div = (brp * (size_t)bitrate);
        size_t tq = (size_t)freq / tq_div;

        /* check for accuracy */
        if (((size_t)freq % tq_div) != 0)
            continue;

        /* ignore out of bounds values */
        if (tq < (size_t)TQ_MIN || tq > (size_t)TQ_MAX)
            continue;

        /* set values */
        if (set_brp_and_prop(ctx, brp, tq) == 0)
            return 0;
    }

    picoRTOS_break();
    /*@notreached@*/
    return -EINVAL;
}

int can_setup(struct can *ctx, struct can_settings *settings)
{
    int res;

    /* disable */
    ctx->base->CAN_MR &= ~CAN_MR_CANEN;

    if ((res = set_bitrate(ctx, settings->bitrate)) < 0)
        return res;

    /* set tx mailboxes */
    if ((res = set_tx_mailboxes(ctx, settings->tx_mailbox_count)) < 0)
        return res;

    ctx->tx_auto_abort = settings->tx_auto_abort;
    ctx->rx_overwrite = settings->rx_overwrite;

    /* ignore loopback */

    /* enable */
    ctx->base->CAN_MR |= CAN_MR_CANEN;
    return 0;
}

int can_accept(struct can *ctx, can_id_t id, can_id_t accept_mask)
{
    if (!picoRTOS_assert(id < (can_id_t)CAN_EXTID_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(accept_mask < (can_id_t)CAN_EXTID_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(ctx->rx_mailbox_index < ctx->rx_mailbox_count)) return -ENOMEM;

    int res;
    struct CAN_SAM3X_MB *mb = &ctx->base->MB[ctx->rx_mailbox_index];

    /* disable mailbox */
    mb->CAN_MMR &= ~CAN_MMRn_MOT(CAN_MMRn_MOT_M);

    /* set MID anyway */
    if ((res = mailbox_config_mid(mb, id)) < 0 ||
        (res = mailbox_config_mam(mb, id, accept_mask)) < 0)
        return res;

    /* re-enable mailbox */
    if (!ctx->rx_overwrite) mb->CAN_MMR |= CAN_MMRn_MOT(CAN_MMRn_MOT_MB_RX);
    else mb->CAN_MMR |= CAN_MMRn_MOT(CAN_MMRn_MOT_MB_RX_OVERWRITE);

    /* start rx */
    mb->CAN_MCR = (uint32_t)CAN_MCRn_MTRC;
    ctx->rx_mailbox_index++;

    return 0;
}

static int transfer_tx_mailbox(struct can *ctx, size_t index,
                               can_id_t id, const void *buf, size_t n)
{
    if (!picoRTOS_assert(index < (size_t)CAN_SAM3X_MB_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(id < (can_id_t)CAN_EXTID_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(n > 0)) return -EINVAL;
    if (!picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT)) return -EINVAL;

    int res;
    const uint8_t *buf8 = (const uint8_t*)buf;
    struct CAN_SAM3X_MB *mb = &ctx->base->MB[index];

    /* double-check */
    if ((mb->CAN_MSR & CAN_MSRn_MRDY) == 0)
        return -EAGAIN;

    /* disable mailbox & set MID */
    mb->CAN_MMR &= ~CAN_MMRn_MOT(CAN_MMRn_MOT_M);

    if ((res = mailbox_config_mid(mb, id)) < 0 ||
        (res = mailbox_config_mam(mb, id, 0)) < 0)
        return res;

    /* reset buffer */
    mb->CAN_MDL = 0;
    mb->CAN_MDH = 0;

    switch (n) {
    case 8: mb->CAN_MDH |= (uint32_t)buf8[7] << 0;      /*@fallthrough@*/
    case 7: mb->CAN_MDH |= (uint32_t)buf8[6] << 8;      /*@fallthrough@*/
    case 6: mb->CAN_MDH |= (uint32_t)buf8[5] << 16;     /*@fallthrough@*/
    case 5: mb->CAN_MDH |= (uint32_t)buf8[4] << 24;     /*@fallthrough@*/
    case 4: mb->CAN_MDL |= (uint32_t)buf8[3] << 0;      /*@fallthrough@*/
    case 3: mb->CAN_MDL |= (uint32_t)buf8[2] << 8;      /*@fallthrough@*/
    case 2: mb->CAN_MDL |= (uint32_t)buf8[1] << 16;     /*@fallthrough@*/
    case 1: mb->CAN_MDL |= (uint32_t)buf8[0] << 24; break;
    default:
        picoRTOS_break();
        /*@notreached@*/
        return -EIO;
    }

    /* start xfer */
    mb->CAN_MMR |= CAN_MMRn_MOT(CAN_MMRn_MOT_MB_TX);
    mb->CAN_MCR = (uint32_t)(CAN_MCRn_MTRC | CAN_MCRn_MDLC(n));
    return (int)n;
}

int can_write(struct can *ctx, can_id_t id, const void *buf, size_t n)
{
    if (!picoRTOS_assert(id < (can_id_t)CAN_EXTID_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(n > 0)) return -EINVAL;
    if (!picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT)) return -EINVAL;

    /* get next index */
    size_t index = ctx->rx_mailbox_count + ctx->tx_mailbox_index;
    uint8_t mask = (uint8_t)(1 << index);

    if ((ctx->base->CAN_SR & mask) == 0) {
        if (ctx->tx_auto_abort) ctx->base->CAN_ACR |= mask;
        return -EAGAIN;
    }

    /* compute next index & transfer */
    ctx->tx_mailbox_index = (ctx->tx_mailbox_index + 1) % ctx->tx_mailbox_count;
    return transfer_tx_mailbox(ctx, index, id, buf, n);
}

static int transfer_rx_mailbox(struct can *ctx, size_t index,
                               can_id_t *id, void *buf, size_t n)
{
    if (!picoRTOS_assert(index < (size_t)CAN_SAM3X_MB_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(n > 0)) return -EINVAL;
    if (!picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT)) return -EINVAL;

    uint8_t *buf8 = (uint8_t*)buf;
    struct CAN_SAM3X_MB *mb = &ctx->base->MB[index];

    if ((mb->CAN_MSR & CAN_MSRn_MRDY) == 0)
        return -EAGAIN;

    switch (n) {
    case 8: buf8[7] = (uint8_t)(mb->CAN_MDH >> 0);      /*@fallthrough@*/
    case 7: buf8[6] = (uint8_t)(mb->CAN_MDH >> 8);      /*@fallthrough@*/
    case 6: buf8[5] = (uint8_t)(mb->CAN_MDH >> 16);     /*@fallthrough@*/
    case 5: buf8[4] = (uint8_t)(mb->CAN_MDH >> 24);     /*@fallthrough@*/
    case 4: buf8[3] = (uint8_t)(mb->CAN_MDL >> 0);      /*@fallthrough@*/
    case 3: buf8[2] = (uint8_t)(mb->CAN_MDL >> 8);      /*@fallthrough@*/
    case 2: buf8[1] = (uint8_t)(mb->CAN_MDL >> 16);     /*@fallthrough@*/
    case 1: buf8[0] = (uint8_t)(mb->CAN_MDL >> 24); break;
    default:
        picoRTOS_break();
        /*@notreached@*/
        return -EIO;
    }

    /* get id */
    *id = mailbox_read_mid(mb);
    n = (size_t)CAN_MCRn_MDLC_GET(mb->CAN_MCR);

    /* reset xfer */
    mb->CAN_MCR = (uint32_t)CAN_MCRn_MTRC;
    return (int)n;
}

int can_read(struct can *ctx, can_id_t *id, void *buf, size_t n)
{
    if (!picoRTOS_assert(n > 0)) return -EINVAL;
    if (!picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT)) return -EINVAL;

    size_t index = ctx->rx_mailbox_index;
    uint8_t mask = (uint8_t)((1 << ctx->rx_mailbox_count) - 1);
    uint32_t mrdy = ctx->base->CAN_SR & mask;

    if (mrdy == 0)
        return -EAGAIN;

    while (index-- != 0)
        if ((mrdy & (1 << index)) != 0)
            return transfer_rx_mailbox(ctx, index, id, buf, n);

    picoRTOS_break();
    /*@notreached@*/
    return -EIO;
}
