==> jnaulet/OpenPicoRTOS/staging/drivers/can/can-gd32vf103.c <==
#include "can-gd32vf103.h"
#include "picoRTOS.h"
#include <stdint.h>
#define CAN_GD32VF103_TM_COUNT     3
#define CAN_GD32VF103_RFIFO_COUNT  2
#define CAN_GD32VF103_FILTER_COUNT 28
#define CAN_CTL_DFZ     (1 << 16)
#define CAN_CTL_SWRST   (1 << 15)
#define CAN_CTL_TTC     (1 << 7)
#define CAN_CTL_ABOR    (1 << 6)
#define CAN_CTL_AWU     (1 << 5)
#define CAN_CTL_ARD     (1 << 4)
#define CAN_CTL_RFOD    (1 << 3)
#define CAN_CTL_TFO     (1 << 2)
#define CAN_CTL_SLPWMOD (1 << 1)
#define CAN_CTL_IWMOD   (1 << 0)
#define CAN_STAT_RXL    (1 << 11)
#define CAN_STAT_LASTRX (1 << 10)
#define CAN_STAT_RS     (1 << 9)
#define CAN_STAT_TS     (1 << 8)
#define CAN_STAT_SLPIF  (1 << 4)
#define CAN_STAT_WUIF   (1 << 3)
#define CAN_STAT_ERRIF  (1 << 2)
#define CAN_STAT_SLPWS  (1 << 1)
#define CAN_STAT_IWS    (1 << 0)
#define CAN_TSTAT_TMLS2    (1u << 31)
#define CAN_TSTAT_TMLS1    (1 << 30)
#define CAN_TSTAT_TMSL0    (1 << 29)
#define CAN_TSTAT_TME2     (1 << 28)
#define CAN_TSTAT_TME1     (1 << 27)
#define CAN_TSTAT_TME0     (1 << 26)
#define CAN_TSTAT_NUM_M    0x3u
#define CAN_TSTAT_NUM(x)   (((x) & CAN_TSTAT_NUM_M) << 24)
#define CAN_TSTAT_MST2     (1 << 23)
#define CAN_TSTAT_MTE2     (1 << 19)
#define CAN_TSTAT_MAL2     (1 << 18)
#define CAN_TSTAT_MTFNERR2 (1 << 17)
#define CAN_TSTAT_MTF2     (1 << 16)
#define CAN_TSTAT_MST1     (1 << 15)
#define CAN_TSTAT_MTE1     (1 << 11)
#define CAN_TSTAT_MAL1     (1 << 10)
#define CAN_TSTAT_MTFNERR1 (1 << 9)
#define CAN_TSTAT_MTF1     (1 << 8)

static int set_bitrate(struct can *ctx, unsigned long bitrate)
{
    picoRTOS_assert(bitrate > 0, return -EINVAL);

    size_t psc;
    clock_freq_t freq;

    if ((freq = clock_get_freq(ctx->clkid)) < 0)
        return (int)freq;

    picoRTOS_assert(((unsigned long)freq % bitrate) == 0,
                    return -EIO);

    /* start iterative detection of params */
    for (psc = (size_t)1; psc <= (size_t)CAN_BT_BAUDPSC_M; psc++) {
        size_t tq_div = (psc * (size_t)bitrate);
        size_t tq = (size_t)freq / tq_div;

        /* check for accuracy */
        if (((size_t)freq % tq_div) != 0)
            continue;

        /* ignore out of bounds values */
        if (tq < (size_t)TQ_MIN || tq > (size_t)TQ_MAX)
            continue;

        /* set values */
        if (set_psc_and_seg(ctx, psc, tq) == 0)
            return 0;
    }

    picoRTOS_break();
    /*@notreached@*/
    return -EINVAL;
}

int can_setup(struct can *ctx, struct can_settings *settings)
{
    int res;

    picoRTOS_assert(settings->tx_auto_abort < CAN_TX_AUTO_ABORT_COUNT, return -EINVAL);
    picoRTOS_assert(settings->rx_overwrite < CAN_RX_OVERWRITE_COUNT, return -EINVAL);
    picoRTOS_assert(settings->loopback < CAN_LOOPBACK_COUNT, return -EINVAL);

    if ((res = sleep_to_initial_working_mode(ctx)) < 0 ||
        (res = set_bitrate(ctx, settings->bitrate)) < 0)
        return res;

    if (settings->tx_auto_abort != CAN_TX_AUTO_ABORT_OFF) ctx->base->CAN_CTL |= CAN_CTL_ABOR;
    else ctx->base->CAN_CTL &= ~CAN_CTL_ABOR;

    if (settings->rx_overwrite != CAN_RX_OVERWRITE_OFF) ctx->base->CAN_CTL &= ~CAN_CTL_RFOD;
    else ctx->base->CAN_CTL |= CAN_CTL_RFOD;

    /* loopback */
    if (settings->loopback != CAN_LOOPBACK_OFF) ctx->base->CAN_BT |= CAN_BT_LCMOD;
    else ctx->base->CAN_BT &= ~CAN_BT_LCMOD;

    /* ignore tx_mailboxes (set to 3 by hw) */

    /* normal mode */
    ctx->base->CAN_CTL &= ~CAN_CTL_IWMOD;

    return 0;
}

int can_accept(struct can *ctx, can_id_t id, can_id_t accept_mask)
{
    picoRTOS_assert(id < (can_id_t)CAN_EXTID_COUNT, return -EINVAL);
    picoRTOS_assert(accept_mask < (can_id_t)CAN_EXTID_COUNT, return -EINVAL);
    picoRTOS_assert(ctx->filter_count < (size_t)CAN_GD32VF103_FILTER_COUNT, return -ENOMEM);

    size_t rfifo_index = (size_t)(ctx->filter_count % CAN_GD32VF103_RFIFO_COUNT);

    /* 32bit mask mode only */
    ctx->base->CAN_FMCFG &= ~(1 << ctx->filter_count);
    ctx->base->CAN_FSCFG |= (1 << ctx->filter_count);
    /* arbitratrily choose rfifo */
    ctx->base->CAN_FAFIFO |= (1 << rfifo_index);

    /* set filter, at last. FIXME */
    ctx->base->FILTER[ctx->filter_count].CAN_FxDATAy[rfifo_index] =
        (uint32_t)CAN_RFIFOMIx_SFID(accept_mask);

    /* enable filter */
    ctx->base->CAN_FW |= (1 << ctx->filter_count++);

    return 0;
}

static int transfer_tx_mailbox(struct can *ctx, size_t index,
                               can_id_t id, const void *buf, size_t n)
{
    picoRTOS_assert(index < (size_t)CAN_GD32VF103_TM_COUNT, return -EINVAL);
    picoRTOS_assert(id < (can_id_t)CAN_EXTID_COUNT, return -EINVAL);
    picoRTOS_assert(n > 0, return -EINVAL);
    picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT, return -EINVAL);

    const uint8_t *buf8 = (const uint8_t*)buf;
    struct CAN_GD32VF103_TM *c99_tm = &ctx->base->TM[index];

    /* reset buffer */
    c99_tm->CAN_TMDATA0x = 0;
    c99_tm->CAN_TMDATA1x = 0;

    switch (n) {
    case 8: c99_tm->CAN_TMDATA1x |= (uint32_t)buf8[7] << 24;    /*@fallthrough@*/
    case 7: c99_tm->CAN_TMDATA1x |= (uint32_t)buf8[6] << 16;    /*@fallthrough@*/
    case 6: c99_tm->CAN_TMDATA1x |= (uint32_t)buf8[5] << 8;     /*@fallthrough@*/
    case 5: c99_tm->CAN_TMDATA1x |= (uint32_t)buf8[4] << 0;     /*@fallthrough@*/
    case 4: c99_tm->CAN_TMDATA0x |= (uint32_t)buf8[3] << 24;    /*@fallthrough@*/
    case 3: c99_tm->CAN_TMDATA0x |= (uint32_t)buf8[2] << 16;    /*@fallthrough@*/
    case 2: c99_tm->CAN_TMDATA0x |= (uint32_t)buf8[1] << 8;     /*@fallthrough@*/
    case 1: c99_tm->CAN_TMDATA0x |= (uint32_t)buf8[0] << 0; break;
    default:
        picoRTOS_break();
        /*@notreached@*/
        return -EIO;
    }

    /* only 11bit can for now */
    c99_tm->CAN_TMPx = (uint32_t)CAN_TMPx_DLENC(n);
    c99_tm->CAN_TMIx = (uint32_t)(CAN_TMIx_SFID(id) | CAN_TMIx_TEN);

    return (int)n;
}

int can_write(struct can *ctx, can_id_t id, const void *buf, size_t n)
{
    picoRTOS_assert(id < (can_id_t)CAN_EXTID_COUNT, return -EINVAL);
    picoRTOS_assert(n > 0, return -EINVAL);
    picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT, return -EINVAL);

    if ((ctx->base->CAN_TSTAT & CAN_TSTAT_TME0) != 0)
        return transfer_tx_mailbox(ctx, (size_t)0, id, buf, n);

    if ((ctx->base->CAN_TSTAT & CAN_TSTAT_TME1) != 0)
        return transfer_tx_mailbox(ctx, (size_t)1, id, buf, n);

    if ((ctx->base->CAN_TSTAT & CAN_TSTAT_TME2) != 0)
        return transfer_tx_mailbox(ctx, (size_t)2, id, buf, n);

    /* FIFOs are full */
    return -EAGAIN;
}

static int transfer_rx_mailbox(struct can *ctx, size_t index,
                               can_id_t *id, void *buf, size_t n)
{
    picoRTOS_assert(index < (size_t)CAN_GD32VF103_RFIFO_COUNT, return -EINVAL);
    picoRTOS_assert(n > 0, return -EINVAL);
    picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT, return -EINVAL);

    uint8_t *buf8 = (uint8_t*)buf;
    struct CAN_GD32VF103_RFIFO *rfifo = &ctx->base->RFIFO[index];

    switch (n) {
    case 8: buf8[7] = (uint8_t)(rfifo->CAN_RFIFOMDATA1x >> 24);     /*@fallthrough@*/
    case 7: buf8[6] = (uint8_t)(rfifo->CAN_RFIFOMDATA1x >> 16);     /*@fallthrough@*/
    case 6: buf8[5] = (uint8_t)(rfifo->CAN_RFIFOMDATA1x >> 8);      /*@fallthrough@*/
    case 5: buf8[4] = (uint8_t)(rfifo->CAN_RFIFOMDATA1x >> 0);      /*@fallthrough@*/
    case 4: buf8[3] = (uint8_t)(rfifo->CAN_RFIFOMDATA0x >> 24);     /*@fallthrough@*/
    case 3: buf8[2] = (uint8_t)(rfifo->CAN_RFIFOMDATA0x >> 16);     /*@fallthrough@*/
    case 2: buf8[1] = (uint8_t)(rfifo->CAN_RFIFOMDATA0x >> 8);      /*@fallthrough@*/
    case 1: buf8[0] = (uint8_t)(rfifo->CAN_RFIFOMDATA0x >> 0); break;
    default:
        picoRTOS_break();
        /*@notreached@*/
        return -EIO;
    }

    /* get id & dlc */
    *id = (can_id_t)(rfifo->CAN_RFIFOMIx >> 21);
    n = (size_t)(rfifo->CAN_RFIFOMPx & CAN_RFIFOMPx_DLENC_M);

    /* mark as processed */
    ctx->base->CAN_RFIFOx[index] |= CAN_RFIFOx_RFDx;
    return (int)n;
}

int can_read(struct can *ctx, can_id_t *id, void *buf, size_t n)
{
    picoRTOS_assert(n > 0, return -EINVAL);
    picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT, return -EINVAL);

    if ((ctx->base->RFIFO[0].CAN_RFIFOMIx & CAN_RFIFOx_RFLx_M) != 0)
        return transfer_rx_mailbox(ctx, (size_t)0, id, buf, n);

    if ((ctx->base->RFIFO[1].CAN_RFIFOMIx & CAN_RFIFOx_RFLx_M) != 0)
        return transfer_rx_mailbox(ctx, (size_t)1, id, buf, n);

    /* no frame */
    return -EAGAIN;
}
